Add navigation bar to app

--- a/WizardSchoolSignUpUIKit/WizardSchoolSignUpUIKit/Base.lproj/Main.storyboard
+++ b/WizardSchoolSignUpUIKit/WizardSchoolSignUpUIKit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="faR-TA-vrG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jzn-Dk-vYh">
-                                <rect key="frame" x="24" y="92" width="366" height="118"/>
+                                <rect key="frame" x="24" y="136" width="366" height="118"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CF5-YE-XEU">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="34"/>
@@ -66,7 +66,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBv-UF-OQd">
-                                <rect key="frame" x="24" y="242" width="366" height="50"/>
+                                <rect key="frame" x="24" y="286" width="366" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="B6Z-Tt-7UX"/>
@@ -87,6 +87,7 @@
                             <constraint firstItem="UBv-UF-OQd" firstAttribute="top" secondItem="Jzn-Dk-vYh" secondAttribute="bottom" constant="32" id="t5z-Tp-Sjy"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="RHM-Qg-0u4"/>
                     <connections>
                         <outlet property="createAccountButton" destination="UBv-UF-OQd" id="YMK-sy-JlB"/>
                         <outlet property="passwordConfirmationIcon" destination="iGt-uH-cpX" id="PRU-1a-PcV"/>
@@ -99,7 +100,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-180" y="71"/>
+            <point key="canvasLocation" x="728.98550724637687" y="70.982142857142847"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="E8O-Mx-kxa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="faR-TA-vrG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oBY-2R-ZsG">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="v9u-Xb-dlH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dXm-fm-juO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-181.15942028985509" y="70.982142857142847"/>
         </scene>
     </scenes>
     <resources>
